--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 
 <!--begin head-->
+
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
@@ -34,72 +35,94 @@
         </header>
         <!--end cabecalho-->
 
+        <!--begin section-->
+        <section id="corpo">
+            <hgroup>
+                <h3>Tecnologia > Inovações</h3> <br />
+                <h1>Tudo sobre o Google Glass</h1> <br />
+                <h2>Por: <sub>Bruno Aguiar</sub></h2>
+                <h3>Atualizado em 11/Março/2025</h3>
+            </hgroup>
 
-        <hgroup>
-            <h3>Tecnologia > Inovações</h3> <br />
-            <h1>Tudo sobre o Google Glass</h1> <br />
-            <h2>Por: <sub>Bruno Aguiar</sub></h2>
-            <h3>Atualizado em 11/Março/2025</h3>
-        </hgroup>
+            <h2>O que é</h2>
 
-        <h2>O que é</h2>
+            <p> O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com
+                diversos conteúdos em realidade aumentada.Também chamado de <a
+                    href="https://en.wikipedia.org/wiki/Google_Glass" target="_blank">Project Glass</a>, o eletrônico é
+                capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar
+                vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de <u>US$ 1,5 mil</u>.
+                Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o
+                dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de
+                tela
+                para o acessório. </p>
 
-        <p> O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com
-            diversos conteúdos em realidade aumentada.Também chamado de <a
-                href="https://en.wikipedia.org/wiki/Google_Glass" target="_blank">Project Glass</a>, o eletrônico é
-            capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar
-            vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de <u>US$ 1,5 mil</u>.
-            Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o
-            dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela
-            para o acessório. </p>
+            <figure class="foto-legenda">
+                <img src="_imagens/glass-quadro-homem-mulher.jpg" />
+                <figcaption>Google Glas - Homem e Mulher</figcaption>
+            </figure>
 
-        <figure class="foto-legenda">
-            <img src="_imagens/glass-quadro-homem-mulher.jpg" />
-            <figcaption>Google Glas - Homem e Mulher</figcaption>
-        </figure>
+            <h2>Data de lançamento</h2>
+            <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
+                disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos,
+                2014.
+            </p> <br />
 
-        <h2>Data de lançamento</h2>
-        <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
-            disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.
-        </p> <br />
+            <h2>Especificações Técnicas</h2>
+            <h3>Tabela Técnica do Google Glass Mar/</h3>
 
-        <h2>Especificações Técnicas</h2>
-        <h3>Tabela Técnica do Google Glass Mar/</h3>
+            <p>Tela:Resolução equivalente a tela de 25"
+                Camera: 5MP para fotos / 720p para vídeos
+                Conectividade: Wi-Fi/ Bluetooth
+                Memória Interna: 12GB</p> <br />
 
-        <p>Tela:Resolução equivalente a tela de 25"
-            Camera: 5MP para fotos / 720p para vídeos
-            Conectividade: Wi-Fi/ Bluetooth
-            Memória Interna: 12GB</p> <br />
+            <h2>Como funciona</h2>
+            <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na
+                parte
+                superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim
+                como
+                selecionar opções com o movimento da cabeça</p> <br />
 
-        <h2>Como funciona</h2>
-        <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte
-            superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como
-            selecionar opções com o movimento da cabeça</p> <br />
-
-        <h2>O que você pode fazer com o Google Glasses</h2>
-        O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
-        <br />
-        <br />
-        [AQUI ENTRA UM VÍDEO]
-        <br />
-        <h2>Outras Notícias</h2>
-        <h3>Vídeo mais recente </h3>
-
-        [AQUI ENTRA UM VÍDEO] <br />
-
-        <h2>Novidades no Glass</h2>
-        <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no
-            mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das
-            hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em
-            determinados ossos de sua cabeça, sem usar nenhum tipo de alto-<wbr/>falante.
+            <h2>O que você pode fazer com o Google Glasses</h2>
+            O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
             <br />
-            Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360
-            pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a
-            2,5 metros de distância do espectador.
-        </p>
+            <br />
+            [AQUI ENTRA UM VÍDEO]
+            <br />
+        </section>
+        <!--end section-->
 
-        Copyright 2013 - by Gustavo Guanabara
-        Facebook | Twitter
+        <!--begin conteudo lateral-->
+        <aside id="lateral">
+
+            <h2>Outras Notícias</h2>
+            <h3>Vídeo mais recente </h3>
+
+            [AQUI ENTRA UM VÍDEO] <br />
+
+            <h2>Novidades no Glass</h2>
+            <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita
+                no
+                mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das
+                hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em
+                determinados ossos de sua cabeça, sem usar nenhum tipo de alto-<wbr/>falante.
+                <br />
+                Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x
+                360
+                pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição
+                colocado a
+                2,5 metros de distância do espectador.
+            </p>
+        </aside>
+        <!--end conteudo lateral-->
+
+        <!--begin rodape-->
+        <footer id="rodape">
+            <p>Copyright &copy; 2025 - by Bruno Aguiar <br>
+
+            <a href="http://facebook.com" target="_blank">Facebook</a> | <a href="http://facebook.com" target="_blank">Twitter</a>
+            </p>
+        </footer>
+        <!--end rodape-->
     </div>
 </body>
 
