--- a/index.html
+++ b/index.html
@@ -37,57 +37,90 @@
 
         <!--begin section-->
         <section id="corpo">
-            <hgroup>
-                <h3>Tecnologia > Inovações</h3> <br />
-                <h1>Tudo sobre o Google Glass</h1> <br />
-                <h2>Por: <sub>Bruno Aguiar</sub></h2>
-                <h3>Atualizado em 11/Março/2025</h3>
-            </hgroup>
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                    <h3 class="direita">Tecnologia > Inovações</h3> 
+                    <h1>Tudo sobre o Google Glass</h1> 
+                    <h2>Por: Bruno Aguiar</h2>
+                    <h3 class="direita">Atualizado em 11/Março/2025</h3>
+                </hgroup>
+                </header>
 
-            <h2>O que é</h2>
+                <h2>O que é</h2>
 
-            <p> O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com
-                diversos conteúdos em realidade aumentada.Também chamado de <a
-                    href="https://en.wikipedia.org/wiki/Google_Glass" target="_blank">Project Glass</a>, o eletrônico é
-                capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar
-                vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de <u>US$ 1,5 mil</u>.
-                Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o
-                dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de
-                tela
-                para o acessório. </p>
+                <p> O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com
+                    diversos conteúdos em realidade aumentada.Também chamado de <a
+                        href="https://en.wikipedia.org/wiki/Google_Glass" target="_blank">Project Glass</a>, o
+                    eletrônico é
+                    capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar
+                    vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de <u>US$ 1,5
+                        mil</u>.
+                    Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com
+                    o
+                    dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio
+                    de
+                    tela
+                    para o acessório. </p>
 
-            <figure class="foto-legenda">
-                <img src="_imagens/glass-quadro-homem-mulher.jpg" />
-                <figcaption>Google Glas - Homem e Mulher</figcaption>
-            </figure>
+                <figure class="foto-legenda">
+                    <img src="_imagens/glass-quadro-homem-mulher.jpg" />
+                    <figcaption>Google Glas - Homem e Mulher</figcaption>
+                </figure>
 
-            <h2>Data de lançamento</h2>
-            <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
-                disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos,
-                2014.
-            </p> <br />
+                <h2>Data de lançamento</h2>
+                <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja
+                    disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo
+                    menos,
+                    2014.
+                </p> <br />
 
-            <h2>Especificações Técnicas</h2>
-            <h3>Tabela Técnica do Google Glass Mar/</h3>
+                <!--Tabela com especificações-->
+                <h2>Especificações Técnicas</h2>
 
-            <p>Tela:Resolução equivalente a tela de 25"
-                Camera: 5MP para fotos / 720p para vídeos
-                Conectividade: Wi-Fi/ Bluetooth
-                Memória Interna: 12GB</p> <br />
+                <table id="tabela">
+                    <caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
+                    <tr>
+                        <td class="ce">Tela</td>
+                        <td class="cd">Resolução equivalente a tela de 25"</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" class="ce">Camera</td>
+                        <td class="cd">5MP para fotos</td>
+                    </tr>
+                    <tr>
+                        <td class="cd">720p para vídeos</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2" class="ce">Conectividade</td>
+                        <td class="cd">Wi-Fi</td>
+                    </tr>
+                    <tr>
+                        <td class="cd">Bluetooth</td>
+                    </tr>
+                    <tr>
+                        <td class="ce">Memória Interna</td>
+                        <td class="cd">12GB</td>
+                    </tr>
+                </table>
+                <!--end tabela com especificações-->
 
-            <h2>Como funciona</h2>
-            <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na
-                parte
-                superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim
-                como
-                selecionar opções com o movimento da cabeça</p> <br />
+                <h2>Como funciona</h2>
+                <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED
+                    na
+                    parte
+                    superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim
+                    como
+                    selecionar opções com o movimento da cabeça</p> <br />
 
-            <h2>O que você pode fazer com o Google Glasses</h2>
-            O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
-            <br />
-            <br />
-            [AQUI ENTRA UM VÍDEO]
-            <br />
+                <h2>O que você pode fazer com o Google Glasses?</h2>
+                <p>
+                    O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
+                </p>
+                
+                [AQUI ENTRA UM VÍDEO]
+                
+            </article>
         </section>
         <!--end section-->
 
@@ -119,10 +152,12 @@
         <footer id="rodape">
             <p>Copyright &copy; 2025 - by Bruno Aguiar <br>
 
-            <a href="http://facebook.com" target="_blank">Facebook</a> | <a href="http://facebook.com" target="_blank">Twitter</a>
+                <a href="http://facebook.com" target="_blank">Facebook</a> | <a href="http://facebook.com"
+                    target="_blank">Twitter</a>
             </p>
         </footer>
         <!--end rodape-->
+
     </div>
 </body>
 
