--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 <!--end head-->
 
+<!--SCRIPT-->
+
+<script>
+    function mudaFoto(foto){
+        document.getElementById('icone').src = foto;
+    }
+</script>
+
+<!--FINAL SCRIPT-->
+
 <body>
 
     <div id="interface">
@@ -25,11 +35,11 @@
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li> <a href="index.html">Home</a> </li>
-                    <li> <a href="specs.html">Especificações</a> </li>
-                    <li> <a href="fotos.html">Fotos</a> </li>
-                    <li> <a href="multimidia.html">Multimídia</a></li>
-                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"> <a href="index.html">Home</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"> <a href="specs.html">Especificações</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"> <a href="fotos.html">Fotos</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"> <a href="fotos.html"> <a href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
