--- a/index.html
+++ b/index.html
@@ -6,20 +6,14 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="icon" type="image/x-icon" href="_imagens/glass-oculos-preto-peq.png"> <!--Icone do site-->
+
+    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS -->
+    <script language="javascript" src="_javascript/funcoes.js"></script> <!-- Arquivo JavaScript -->
 </head>
 <!--end head-->
 
-<!--SCRIPT-->
-
-<script>
-    function mudaFoto(foto){
-        document.getElementById('icone').src = foto;
-    }
-</script>
-
-<!--FINAL SCRIPT-->
-
+<!--begin body-->
 <body>
 
     <div id="interface">
