--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -1,67 +1,96 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!--begin head-->
 
 <head>
-    <meta charset= "UTF-8"/>
-    <title>Fale conosco</title>
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
-</head>
+    <meta charset="UTF-8" />
+    <title>Multimídia</title>
+    <link rel="icon" type="image/x-icon" href="_imagens/glass-oculos-preto-peq.png"> <!--Icone do site-->
+
+    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS -->
+    <script language="javascript" src="_javascript/funcoes.js"></script> <!-- Arquivo JavaScript -->
+    <!--end head-->
+
+    <!--begin body-->
+
 <body>
-    
-<div id="interface">
 
-    <header id="cabecalho">
-    <hgroup>
-        <h1>Google Glass </h1>
-        <h2> A revolução do Google está chegando</h2>
-    </hgroup>
+    <div id="interface">
+        <!--begin cabecalho-->
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass </h1>
+                <h2> A revolução do Google está chegando</h2>
+            </hgroup>
 
-    <img src="_imagens/glass-oculos-preto-peq.png"/>
+            <img id="icone" src="_imagens/contato.png" />
 
-    Menu Principal
-    - Home
-    - Especificações
-    - Fotos
-    - Multimídia
-    - Fale conosco
-    </header>
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"> <a
+                            href="index.html">Home</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('_imagens/contato.png')"> <a href="specs.html">Especificações</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')">
+                        <a href="fotos.html">Fotos</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')"
+                        onmouseout="mudaFoto('_imagens/contato.png')">
+                        <a href="fotos.html"> <a href="multimidia.html">Multimídia</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')">
+                        <a href="fale-conosco.html">Fale
+                            conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <!--end cabecalho-->
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
+        Fale Conosco > Contato
+        Formulário de Contato
+        por Gustavo Guanabara
+        Atualizado em 01/Maio/2013
+
+        Identificação do Usuário
+        Nome:
+        Senha:
+        E-mail:
+        Sexo:
         - Masculino
         - Feminino
-    Data de Nascimento:
+        Data de Nascimento:
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+        Endereço do Usuário
+        Logradouro:
+        Número:
+        Estado:
+        Cidade:
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+        Mensagem do Usuário
+        Grau de Urgência:
+        Mensagem:
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+        Quero um Google Glass
+        Gostaria de adquirir um Google Glass quando disponível
+        Cor:
+        Quantidade:
+        Preço Total: R$
 
 
-[BOTÃO ENVIAR]
+        [BOTÃO ENVIAR]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
-</div>
+        <!--begin rodape-->
+        <footer id="rodape">
+            <p>Copyright &copy; 2025 - by Bruno Aguiar <br>
+
+                <a href="http://facebook.com" target="_blank">Facebook</a> | <a href="http://facebook.com"
+                    target="_blank">Twitter</a>
+            </p>
+        </footer>
+        <!--end rodape-->
+    </div>
 
 </body>
 
