--- a/specs.html
+++ b/specs.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+<!--begin head-->
+
 <head>
-    <meta charset= "UTF-8"/>
-    <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+    <meta charset="UTF-8" />
+    <title>Especificações</title>
+    <link rel="icon" type="image/x-icon" href="_imagens/glass-oculos-preto-peq.png"> <!--Icone do site-->
+
+    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS -->
+    <script language="javascript" src="_javascript/funcoes.js"></script> <!-- Arquivo JavaScript -->
 </head>
+<!--end head-->
+
 <body>
-    
-<div id="interface">
 
-    <header id="cabecalho">
+    <div id="interface">
+        <!--begin cabecalho-->
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass </h1>
+                <h2> A revolução do Google está chegando</h2>
+            </hgroup>
 
-    <hgroup>
-        <h1>Google Glass </h1>
-        <h2> A revolução do Google está chegando</h2>
-    </hgroup>
+            <img id="icone" src="_imagens/especificacoes.png" />
 
-[AQUI ENTRA UMA FOTO]
-
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
-    </header>
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="index.html">Home</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="specs.html">Especificações</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="fotos.html">Fotos</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="fotos.html"> <a href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!--end cabecalho-->
 
 Glass > Especificações
 Raio-X no Google Glass
@@ -36,8 +47,16 @@ Clique em qualquer área destacada da imagem para ter mais informações sobre o
 
 [AQUI ENTRA UMA IMAGEM]
 
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+<!--begin rodape-->
+<footer id="rodape">
+    <p>Copyright &copy; 2025 - by Bruno Aguiar <br>
+
+        <a href="http://facebook.com" target="_blank">Facebook</a> | <a href="http://facebook.com"
+            target="_blank">Twitter</a>
+    </p>
+</footer>
+<!--end rodape-->
+
 </div>
 </body>
 </html>
