--- a/specs.html
+++ b/specs.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 
 <!--begin head-->
-
 <head>
     <meta charset="UTF-8" />
     <title>Especificações</title>
     <link rel="icon" type="image/x-icon" href="_imagens/glass-oculos-preto-peq.png"> <!--Icone do site-->
 
-    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS -->
+    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS com propriedades só dessa pagina -->
+    <link rel="stylesheet" href="_css/specs.css"> <!-- Arquivo CSS -->
     <script language="javascript" src="_javascript/funcoes.js"></script> <!-- Arquivo JavaScript -->
 </head>
 <!--end head-->
@@ -16,6 +16,7 @@
 <body>
 
     <div id="interface">
+
         <!--begin cabecalho-->
         <header id="cabecalho">
             <hgroup>
@@ -28,35 +29,57 @@
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="index.html">Home</a> </li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="specs.html">Especificações</a> </li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="fotos.html">Fotos</a> </li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="fotos.html"> <a href="multimidia.html">Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('_imagens/home.png')"
+                        onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="index.html">Home</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="specs.html">Especificações</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')"
+                        onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="fotos.html">Fotos</a> </li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')"
+                        onmouseout="mudaFoto('_imagens/especificacoes.png')"> <a href="fotos.html"> <a
+                                href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')"
+                        onmouseout="mudaFoto('_imagens/especificacoes.png')"><a href="fale-conosco.html">Fale
+                            conosco</a></li>
                 </ul>
             </nav>
         </header>
         <!--end cabecalho-->
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3 class="direita">Glass > Especificações</h3>
+                        <h1>Raio-X no Google Glass</h1>
+                        <h2>Por: Bruno Aguiar</h2>
+                        <h3 class="direita">Atualizado em 07/Abril/2025</h3>
+                    </hgroup>
+                </header>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+                <p>
+                    Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google
+                    Glass.
+                    Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+                </p>
+                <section id="conteudo">
+                    <img src="_imagens/glass-esquema-marcado.jpg">
+                    <iframe src="google-glass.html" name="janela" id="frame-spec" style="::-webkit-scrollbar: display: none;"></iframe>
+                </section>
+            </article>
+        </section>
+        <!--begin rodape-->
+        <footer id="rodape">
+            <p>Copyright &copy; 2025 - by Bruno Aguiar <br>
 
-[AQUI ENTRA UMA IMAGEM]
+                <a href="http://facebook.com" target="_blank">Facebook</a> | <a href="http://facebook.com"
+                    target="_blank">Twitter</a>
+            </p>
+        </footer>
+        <!--end rodape-->
 
-<!--begin rodape-->
-<footer id="rodape">
-    <p>Copyright &copy; 2025 - by Bruno Aguiar <br>
-
-        <a href="http://facebook.com" target="_blank">Facebook</a> | <a href="http://facebook.com"
-            target="_blank">Twitter</a>
-    </p>
-</footer>
-<!--end rodape-->
-
-</div>
+    </div>
 </body>
+
 </html>
