--- a/specs.html
+++ b/specs.html
@@ -64,8 +64,18 @@
                     Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
                 </p>
                 <section id="conteudo">
-                    <img src="_imagens/glass-esquema-marcado.jpg">
-                    <iframe src="google-glass.html" name="janela" id="frame-spec" style="::-webkit-scrollbar: display: none;"></iframe>
+
+                    <!--Imagem com mapa de imagem-->
+                    <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa">
+                    <map name="meumapa">
+                        <area shape="rect" coords="180,200,270,260" href="google-glass.html#tela" target="janela"/>
+                        <area shape="circle" coords="158,243,12" href="google-glass.html#camera" target="janela" >
+                        <area shape="circle" coords="76,52,12" href="google-glass.html#gadgets" target="janela">
+                        <area shape="poly" coords="28,143,83,216,84,249,27,169" href="google-glass.html#sensores" target="janela">
+                    </map>
+
+
+                    <iframe scrolling="no" src="google-glass.html" name="janela" id="frame-spec"></iframe> <!--"imagem alteral que muda de acorod com o Raio-x"-->
                 </section>
             </article>
         </section>
