--- a/specs.html
+++ b/specs.html
@@ -7,8 +7,8 @@
     <title>Especificações</title>
     <link rel="icon" type="image/x-icon" href="_imagens/glass-oculos-preto-peq.png"> <!--Icone do site-->
 
-    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS com propriedades só dessa pagina -->
-    <link rel="stylesheet" href="_css/specs.css"> <!-- Arquivo CSS -->
+    <link rel="stylesheet" href="_css/estilo.css"> <!-- Arquivo CSS -->
+    <link rel="stylesheet" href="_css/specs.css"> <!-- Arquivo CSS com propriedades só dessa pagina -->
     <script language="javascript" src="_javascript/funcoes.js"></script> <!-- Arquivo JavaScript -->
 </head>
 <!--end head-->
@@ -46,7 +46,6 @@
             </nav>
         </header>
         <!--end cabecalho-->
-
         <section id="corpo-full">
             <article id="noticia-principal">
                 <header id="cabecalho-artigo">
@@ -71,7 +70,7 @@
                         <area shape="rect" coords="180,200,270,260" href="google-glass.html#tela" target="janela"/>
                         <area shape="circle" coords="158,243,12" href="google-glass.html#camera" target="janela" >
                         <area shape="circle" coords="76,52,12" href="google-glass.html#gadgets" target="janela">
-                        <area shape="poly" coords="28,143,83,216,84,249,27,169" href="google-glass.html#sensores" target="janela">
+                        <area shape="poly" coords="28,143,83,216,84,249,27,16" href="google-glass.html#sensores" target="janela">
                     </map>
 
 
