--- a/fotos.html
+++ b/fotos.html
@@ -69,8 +69,10 @@
             <li id="foto05"><span>Vários tipos de lente</span></li>
             <li id="foto06"><span>Informações importantes</span></li>
         </ul>
+            </article>
+        </section>
 
-        <!--begin rodape-->
+<!--begin rodape-->
         <footer id="rodape">
             <p>Copyright &copy; 2025 - by Bruno Aguiar <br>
 
@@ -78,7 +80,7 @@
                     target="_blank">Twitter</a>
             </p>
         </footer>
-        <!--end rodape-->
+ <!--end rodape-->
     </div>
 </body>
 
