--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 
 <!--begin head-->
-
 <head>
     <meta charset="UTF-8" />
     <title>Tudo sobre Google Glass</title>
@@ -17,7 +16,7 @@
 <body>
 
     <div id="interface">
-        <!--begin cabecalho-->
+<!--begin cabecalho-->
         <header id="cabecalho">
             <hgroup>
                 <h1>Google Glass </h1>
@@ -37,9 +36,9 @@
                 </ul>
             </nav>
         </header>
-        <!--end cabecalho-->
+<!--end cabecalho-->
 
-        <!--begin section-->
+<!--begin section-->
         <section id="corpo">
             <article id="noticia-principal">
                 <header id="cabecalho-artigo">
@@ -79,7 +78,7 @@
                     2014.
                 </p> <br />
 
-                <!--Tabela com especificações-->
+<!--Tabela com especificações-->
                 <h2>Especificações Técnicas</h2>
 
                 <table id="tabela">
@@ -107,7 +106,7 @@
                         <td class="cd">12GB</td>
                     </tr>
                 </table>
-                <!--end tabela com especificações-->
+<!--end tabela com especificações-->
 
                 <h2>Como funciona</h2>
                 <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED
@@ -122,11 +121,14 @@
                     O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
                 </p>
                 
-                [AQUI ENTRA UM VÍDEO]
+                <video id="filme" controls="controls" poster="_imagens/video-mini01.jpg">
+                    <source src="_media/how-it-feels.mp4" type="video/mp4"/>
+                    Desculpe, mas não foi possível carregar o vídeo.
+                </video>
                 
             </article>
         </section>
-        <!--end section-->
+<!--end section-->
 
         <!--begin conteudo lateral-->
         <aside id="lateral">
@@ -134,7 +136,10 @@
             <h2>Outras Notícias</h2>
             <h3>Vídeo mais recente </h3>
 
-            [AQUI ENTRA UM VÍDEO] <br />
+            <video id="filme" controls="controls" poster="_imagens/video-mini02.jpg">
+                <source src="_media/one-day.mp4" type="video/mp4"/>
+                Desculpe, mas não foi possível carregar o vídeo.
+            </video> 
 
             <h2>Novidades no Glass</h2>
             <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita
